# black_box

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  tasks.txt
src/: App.tsx  Hello.tsx  index.css  main.rs  main.tsx
src-tauri/: Cargo.toml  db.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/stream/: stream.rs
src-tauri/src/user/: users.rs
src/Components/: Imputs.tsx
src/connection/: mod.rs  to_server.rs
src/start/: start.rs
src/stream/: video.rs
src/ui/: mod.rs  struct_ui.rs  test_ui.rs
src/ws/: connection.rs
