[package]
name = "black_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" ] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
sodiumoxide = "0.2.7"
pin-project = "1.0.10"
tokio-stream = "0.1"
actix-files = "0.6"
futures = "0.3.21"