[package]
name = "black_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" ] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.80"
sodiumoxide = "0.2.7"
pin-project = "1.0.10"
tokio-stream = "0.1"
actix-files = "0.6"
futures = "0.3.21"
actix-web-actors = "4.1.0"
actix = "0.13.0"
reqwest = "0.11.10"
actix-cors = "0.6.1"
local-ip-address = "0.4.4"
bytestring = "1.0.0"
websocket = "0.26.4"
futures-util = "0.3.21"
druid = "0.7.0"
actix-codec = "0.5.0"
